--- a/wiki/index.html
+++ b/wiki/index.html
@@ -981,6 +981,8 @@ Error message and password prompt
 
 <li>docker</li>
 
+<li>Elixir</li>
+
 <li>Environment variables</li>
 
 <li>etcd 无法watch</li>
@@ -18008,7 +18010,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20200703170724377" list="[[Signal experience]] Bash [[Exit Codes With Special Meanings]] $:/AdvancedSearch [[wait &amp;&amp; waitpid]] TableOfContents" modified="20200703172728670" title="$:/StoryList">
+<div created="20200703170724377" list="[[Programming language]] Elixir [[Formal language]] [[Signal experience]] Bash [[Exit Codes With Special Meanings]] $:/AdvancedSearch [[wait &amp;&amp; waitpid]] TableOfContents" modified="20200704090835148" title="$:/StoryList">
 <pre></pre>
 </div>
 <div bag="default" created="20191206235905940" modified="20200218074428072" revision="0" tags="$:/tags/Stylesheet" title="$:/styles/onlyice/ui-elements" type="text/vnd.tiddlywiki">
@@ -19057,8 +19059,8 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200502174943975" modified="20200521150755106" title="$:/temp/RenameTags/search">
 <pre>blinks</pre>
 </div>
-<div created="20200418122544376" modified="20200702125055409" title="$:/temp/search">
-<pre></pre>
+<div created="20200418122544376" modified="20200704090831899" title="$:/temp/search">
+<pre>langu</pre>
 </div>
 <div created="20200626105030927" modified="20200626105030927" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html" url="https://tiddlywiki.com/library/v5.1.22/index.html">
 <pre>loaded</pre>
@@ -19403,6 +19405,11 @@ In terms of classiful [[networks]], there are five classes: A, B, C, D, and E. C
 </div>
 <div created="20200622110429773" modified="20200622110429773" title="docker">
 <pre></pre>
+</div>
+<div created="20200704090838711" modified="20200704090854798" tags="[[Programming language]]" title="Elixir">
+<pre>[[Programming language]]
+
+https://www.zhihu.com/question/321011169/answer/658027406</pre>
 </div>
 <div created="20200702153116945" modified="20200702153829074" tags="Process" title="Environment variables">
 <pre>An environment variable is a dynamic-named value that can affect the way running [[Process]] will behave on a computer. They are part of the environment in which a process runs.
