--- a/wiki/index.html
+++ b/wiki/index.html
@@ -985,6 +985,8 @@ Error message and password prompt
 
 <li>Environment variables</li>
 
+<li>Erlang性能</li>
+
 <li>etcd 无法watch</li>
 
 <li>Everything is a file</li>
@@ -18010,7 +18012,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20200703170724377" list="[[Programming language]] Elixir [[Formal language]] [[Signal experience]] Bash [[Exit Codes With Special Meanings]] $:/AdvancedSearch [[wait &amp;&amp; waitpid]] TableOfContents" modified="20200704090835148" title="$:/StoryList">
+<div created="20200703170724377" list="[[Programming language]] Elixir Erlang性能 [[Formal language]] [[Signal experience]] Bash [[Exit Codes With Special Meanings]] $:/AdvancedSearch [[wait &amp;&amp; waitpid]] TableOfContents" modified="20200704090835148" title="$:/StoryList">
 <pre></pre>
 </div>
 <div bag="default" created="20191206235905940" modified="20200218074428072" revision="0" tags="$:/tags/Stylesheet" title="$:/styles/onlyice/ui-elements" type="text/vnd.tiddlywiki">
@@ -19459,6 +19461,13 @@ LANG
 
 &quot;&quot;&quot;
 &lt;/div&gt;</pre>
+</div>
+<div created="20200704090908056" modified="20200704091253822" tags="Elixir" title="Erlang性能">
+<pre>[[Elixir]]
+
+* https://www.wired.com/2015/09/whatsapp-serves-900-million-users-50-engineers/
+* https://blog.discord.com/scaling-elixir-f9b8e1e7c29b
+</pre>
 </div>
 <div created="20200617041601630" modified="20200617041630776" tags="etcd" title="etcd 无法watch" type="text/x-markdown">
 <pre>[auth token invalid after watch reconnects](https://github.com/etcd-io/etcd/issues/11954)</pre>
