--- a/wiki/index.html
+++ b/wiki/index.html
@@ -1041,6 +1041,8 @@ Error message and password prompt
 
 <li>irqbalance</li>
 
+<li>JobControl</li>
+
 <li>Joe Armstrong</li>
 
 <li>kill</li>
@@ -18390,7 +18392,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20200703170724377" list="[[Joe Armstrong]] [[Programming language theory]] Elixir Erlang性能 [[Formal language]] [[Signal experience]] Bash [[Exit Codes With Special Meanings]] $:/AdvancedSearch [[wait &amp;&amp; waitpid]] TableOfContents" modified="20200704092925367" title="$:/StoryList">
+<div created="20200703170724377" list="Linux JobControl SIGHUP [[Joe Armstrong]] [[Programming language theory]] Elixir Erlang性能 [[Formal language]] [[Signal experience]] Bash [[Exit Codes With Special Meanings]] $:/AdvancedSearch [[wait &amp;&amp; waitpid]] TableOfContents" modified="20200704115405164" title="$:/StoryList">
 <pre></pre>
 </div>
 <div bag="default" created="20191206235905940" modified="20200218074428072" revision="0" tags="$:/tags/Stylesheet" title="$:/styles/onlyice/ui-elements" type="text/vnd.tiddlywiki">
@@ -18416,8 +18418,8 @@ exports.context = contextWidget;
 <div bag="default" created="20200127144249151" list="$:/core/ui/Buttons/close-others $:/_sq/Stories/divertTiddlerMacro $:/core/ui/Buttons/fold $:/.giffmex/ViewToolbar/new-note-here $:/.giffmex/ViewToolbar/new-note-here-datetime $:/core/ui/Buttons/info $:/core/ui/Buttons/new-here $:/core/ui/Buttons/new-journal-here $:/core/ui/Buttons/clone $:/core/ui/Buttons/export-tiddler $:/core/ui/Buttons/edit $:/core/ui/Buttons/delete $:/core/ui/Buttons/permalink $:/core/ui/Buttons/permaview $:/core/ui/Buttons/open-window $:/core/ui/Buttons/close $:/core/ui/Buttons/more-tiddler-actions $:/core/ui/Buttons/fold-others $:/core/ui/Buttons/fold-bar" modified="20200625045555055" revision="0" tags="$:/giffmex/stroll" title="$:/tags/ViewToolbar" type="text/vnd.tiddlywiki">
 <pre></pre>
 </div>
-<div created="20200418122547595" modified="20200704092828346" title="$:/temp/advancedsearch">
-<pre>joe</pre>
+<div created="20200418122547595" modified="20200704115108776" title="$:/temp/advancedsearch">
+<pre>sighu</pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
 <pre>{
@@ -19439,8 +19441,8 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200502174943975" modified="20200521150755106" title="$:/temp/RenameTags/search">
 <pre>blinks</pre>
 </div>
-<div created="20200418122544376" modified="20200704092821723" title="$:/temp/search">
-<pre>Joe</pre>
+<div created="20200418122544376" modified="20200704115403775" title="$:/temp/search">
+<pre>linux</pre>
 </div>
 <div created="20200626105030927" modified="20200626105030927" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html" url="https://tiddlywiki.com/library/v5.1.22/index.html">
 <pre>loaded</pre>
@@ -20121,6 +20123,9 @@ In computer science, inter-process communication or interprocess communication (
 </div>
 <div created="20200628054351273" modified="20200628054351273" title="irqbalance">
 <pre></pre>
+</div>
+<div created="20200704115412787" modified="20200704115459902" tags="Linux" title="JobControl">
+<pre>[[Linux]]</pre>
 </div>
 <div created="20200620041557875" modified="20200620041557875" title="Joe Armstrong">
 <pre></pre>
