--- a/wiki/index.html
+++ b/wiki/index.html
@@ -1093,6 +1093,10 @@ Error message and password prompt
 
 <li>Process</li>
 
+<li>ProcessGroups</li>
+
+<li>ProcessSessions</li>
+
 <li>product type</li>
 
 <li>product types</li>
@@ -20124,8 +20128,10 @@ In computer science, inter-process communication or interprocess communication (
 <div created="20200628054351273" modified="20200628054351273" title="irqbalance">
 <pre></pre>
 </div>
-<div created="20200704115412787" modified="20200704115459902" tags="Linux" title="JobControl">
-<pre>[[Linux]]</pre>
+<div created="20200704115412787" modified="20200704120100566" tags="Linux" title="JobControl">
+<pre>[[Linux]]
+
+[[ProcessSessions]] and [[ProcessGroups]] were defined to support shell job control (although occasionally they find other uses in applications). </pre>
 </div>
 <div created="20200620041557875" modified="20200620041557875" title="Joe Armstrong">
 <pre></pre>
@@ -20369,6 +20375,12 @@ The definition of a process, informally, is quite simple: it is a running progra
 &lt;&lt;toc-selective-expandable 'Process' sort[ind]&gt;&gt;
 
 &lt;/div&gt;</pre>
+</div>
+<div created="20200704120100567" modified="20200704120100567" title="ProcessGroups">
+<pre></pre>
+</div>
+<div created="20200704120100566" modified="20200704120100566" title="ProcessSessions">
+<pre></pre>
 </div>
 <div created="20200626143636901" modified="20200626171253698" tags="[[Algebraic data type]]" title="product type" type="text/x-markdown">
 <pre>&gt; A product type (from &quot;Cartesian product&quot;, i.e tuples) T = A * B means that a value of type T has a component that is of type A and another component that is of type B. It is used to aggregate parts into a whole.
