--- a/wiki/index.html
+++ b/wiki/index.html
@@ -153,8 +153,6 @@ Error message and password prompt
 
 <li>$:/_sq/Stories/divertTiddlerMacro</li>
 
-<li>$:/_sq/Stories/Story2HistoryList</li>
-
 <li>$:/_sq/Stories/Story2StoryList</li>
 
 <li>$:/.giffmex/.Stylesheet4Stroll</li>
@@ -983,8 +981,6 @@ Error message and password prompt
 
 <li>docker</li>
 
-<li>Draft of 'ProcessSessions'</li>
-
 <li>Elixir</li>
 
 <li>Environment variables</li>
@@ -1293,382 +1289,6 @@ Error message and password prompt
 
 
 </pre>
-</div>
-<div created="20200425131030296" current-tiddler="Programming language" modified="20200704092925368" title="$:/_sq/Stories/Story2HistoryList" type="application/json">
-<pre>[
-    {
-        &quot;title&quot;: &quot;$:/config/Tiddlers/TitleLinks&quot;,
-        &quot;fromPageRect&quot;: {
-            &quot;top&quot;: 249.296875,
-            &quot;left&quot;: 1230,
-            &quot;width&quot;: 183.515625,
-            &quot;right&quot;: 1413.515625,
-            &quot;bottom&quot;: 269.296875,
-            &quot;height&quot;: 20
-        }
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/divertTiddlerMacro&quot;,
-        &quot;fromPageRect&quot;: {
-            &quot;top&quot;: 623.296875,
-            &quot;left&quot;: 1230,
-            &quot;width&quot;: 220.390625,
-            &quot;right&quot;: 1450.390625,
-            &quot;bottom&quot;: 643.296875,
-            &quot;height&quot;: 20
-        }
-    },
-    {
-        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/divertTiddlerMacro'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/divertTiddlerMacro&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/divertTiddlerMacro'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/divertTiddlerMacro&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/divertTiddlerEditMacro&quot;,
-        &quot;fromPageRect&quot;: {
-            &quot;top&quot;: 319.296875,
-            &quot;left&quot;: 1230,
-            &quot;width&quot;: 245.53125,
-            &quot;right&quot;: 1475.53125,
-            &quot;bottom&quot;: 339.296875,
-            &quot;height&quot;: 20
-        }
-    },
-    {
-        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/divertTiddlerEditMacro'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/divertTiddlerEditMacro&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/Templates/StoryToggleMenu&quot;,
-        &quot;fromPageRect&quot;: {
-            &quot;top&quot;: 537.296875,
-            &quot;left&quot;: 1230,
-            &quot;width&quot;: 283.546875,
-            &quot;right&quot;: 1513.546875,
-            &quot;bottom&quot;: 557.296875,
-            &quot;height&quot;: 20
-        }
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/Templates/StoryTogglePageControl&quot;,
-        &quot;fromPageRect&quot;: {
-            &quot;top&quot;: 297.296875,
-            &quot;left&quot;: 1230,
-            &quot;width&quot;: 326.734375,
-            &quot;right&quot;: 1556.734375,
-            &quot;bottom&quot;: 317.296875,
-            &quot;height&quot;: 20
-        }
-    },
-    {
-        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/Templates/StoryTogglePageControl'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/Templates/StoryTogglePageControl&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/Templates/StoryTogglePageControl'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/Templates/StoryTogglePageControl&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/Templates/StoryTogglePageControl'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/Templates/StoryTogglePageControl&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/Templates/StoryToggleMenu'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/Templates/StoryToggleMenu&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/Templates/StoryToggleMenu'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/Templates/StoryToggleMenu&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/divertTiddlerEditMacro'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/divertTiddlerEditMacro&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/Templates/StoryTogglePageControl'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/Templates/StoryTogglePageControl&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/Templates/StoryTogglePageControl'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/Templates/StoryTogglePageControl&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/Templates/StoryTogglePageControl'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/Templates/StoryTogglePageControl&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/Templates/StoryToggleMenu'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/Templates/StoryToggleMenu&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/Templates/StoryToggleMenu'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/Templates/StoryToggleMenu&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/Templates/StoryTogglePageControl'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/Templates/StoryTogglePageControl&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/divertTiddlerEditMacro'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/divertTiddlerEditMacro&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/core/ui/SideBar/Open&quot;,
-        &quot;fromPageRect&quot;: {
-            &quot;top&quot;: 337.296875,
-            &quot;left&quot;: 1230,
-            &quot;width&quot;: 161.8125,
-            &quot;right&quot;: 1391.8125,
-            &quot;bottom&quot;: 357.296875,
-            &quot;height&quot;: 20
-        }
-    },
-    {
-        &quot;title&quot;: &quot;Draft of '$:/core/ui/SideBar/Open'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/core/ui/SideBar/Open&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/divertTiddlerEditMacro'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/divertTiddlerEditMacro&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/divertTiddlerEditMacro'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/divertTiddlerEditMacro&quot;
-    },
-    {
-        &quot;title&quot;: &quot;TiddlyBlink&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Stories-overview&quot;,
-        &quot;fromPageRect&quot;: {
-            &quot;top&quot;: 1035.921875,
-            &quot;left&quot;: 1190,
-            &quot;width&quot;: 101.6875,
-            &quot;right&quot;: 1291.6875,
-            &quot;bottom&quot;: 1054.921875,
-            &quot;height&quot;: 19
-        }
-    },
-    {
-        &quot;title&quot;: &quot;$:/.giffmex/Customize.TiddlyBlink&quot;,
-        &quot;fromPageRect&quot;: {
-            &quot;top&quot;: 735.625,
-            &quot;left&quot;: 107.5,
-            &quot;width&quot;: 145.171875,
-            &quot;right&quot;: 252.671875,
-            &quot;bottom&quot;: 755.625,
-            &quot;height&quot;: 20
-        }
-    },
-    {
-        &quot;title&quot;: &quot;$:/.giffmex/meta/hack.tiddlyblink&quot;,
-        &quot;fromPageRect&quot;: {
-            &quot;top&quot;: 757.625,
-            &quot;left&quot;: 107.5,
-            &quot;width&quot;: 129.59375,
-            &quot;right&quot;: 237.09375,
-            &quot;bottom&quot;: 777.625,
-            &quot;height&quot;: 20
-        }
-    },
-    {
-        &quot;title&quot;: &quot;TiddlyBlink&quot;,
-        &quot;fromPageRect&quot;: {
-            &quot;top&quot;: 161.296875,
-            &quot;left&quot;: 221.953125,
-            &quot;width&quot;: 71.859375,
-            &quot;right&quot;: 293.8125,
-            &quot;bottom&quot;: 181.296875,
-            &quot;height&quot;: 20
-        }
-    },
-    {
-        &quot;title&quot;: &quot;TiddlyBlink&quot;,
-        &quot;fromPageRect&quot;: {
-            &quot;top&quot;: 161.296875,
-            &quot;left&quot;: 221.953125,
-            &quot;width&quot;: 71.859375,
-            &quot;right&quot;: 293.8125,
-            &quot;bottom&quot;: 181.296875,
-            &quot;height&quot;: 20
-        }
-    },
-    {
-        &quot;title&quot;: &quot;Stories-overview&quot;,
-        &quot;fromPageRect&quot;: {}
-    },
-    {
-        &quot;title&quot;: &quot;Draft of 'Stories-overview'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Stories-overview&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Draft of 'Stories-overview'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Stories-overview&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Draft of 'Stories'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Plugin maker&quot;,
-        &quot;fromPageRect&quot;: {
-            &quot;top&quot;: 481.34375,
-            &quot;left&quot;: 2259,
-            &quot;width&quot;: 80.890625,
-            &quot;right&quot;: 2339.890625,
-            &quot;bottom&quot;: 500.34375,
-            &quot;height&quot;: 19
-        }
-    },
-    {
-        &quot;title&quot;: &quot;Draft of 'Plugin maker'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Plugin maker&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Stories&quot;,
-        &quot;fromPageRect&quot;: {
-            &quot;top&quot;: 296.84375,
-            &quot;left&quot;: 2259,
-            &quot;width&quot;: 41.453125,
-            &quot;right&quot;: 2300.453125,
-            &quot;bottom&quot;: 315.84375,
-            &quot;height&quot;: 19
-        }
-    },
-    {
-        &quot;title&quot;: &quot;Plugin maker&quot;,
-        &quot;fromPageRect&quot;: {
-            &quot;top&quot;: 501.34375,
-            &quot;left&quot;: 2259,
-            &quot;width&quot;: 80.890625,
-            &quot;right&quot;: 2339.890625,
-            &quot;bottom&quot;: 520.34375,
-            &quot;height&quot;: 19
-        }
-    },
-    {
-        &quot;title&quot;: &quot;Draft of 'Plugin maker'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Plugin maker&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Draft of 'Stories'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Stories&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/config/Settings&quot;,
-        &quot;fromPageRect&quot;: {
-            &quot;top&quot;: 360.171875,
-            &quot;left&quot;: 1245,
-            &quot;width&quot;: 182.21875,
-            &quot;right&quot;: 1427.21875,
-            &quot;bottom&quot;: 379.171875,
-            &quot;height&quot;: 19
-        }
-    },
-    {
-        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/config/Settings'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/config/Settings&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/config/Settings&quot;,
-        &quot;fromPageRect&quot;: {
-            &quot;top&quot;: 360.171875,
-            &quot;left&quot;: 1245,
-            &quot;width&quot;: 182.21875,
-            &quot;right&quot;: 1427.21875,
-            &quot;bottom&quot;: 379.171875,
-            &quot;height&quot;: 19
-        }
-    },
-    {
-        &quot;title&quot;: &quot;Draft of '$:/_sq/Stories/config/Settings'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/_sq/Stories/config/Settings&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Draft of 'Stories'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Stories&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Draft of 'Stories'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Stories&quot;
-    },
-    {
-        &quot;title&quot;: &quot;Draft of 'Stories'&quot;
-    },
-    {
-        &quot;title&quot;: &quot;$:/plugins/sq/Stories&quot;,
-        &quot;fromPageRect&quot;: {
-            &quot;top&quot;: 463.734375,
-            &quot;left&quot;: 2321.1875,
-            &quot;width&quot;: 476.734375,
-            &quot;right&quot;: 2797.921875,
-            &quot;bottom&quot;: 482.734375,
-            &quot;height&quot;: 19
-        }
-    },
-    {
-        &quot;title&quot;: &quot;Programming language&quot;,
-        &quot;fromPageRect&quot;: {}
-    }
-]</pre>
 </div>
 <div bag="default" created="20170615140314952" list="" modified="20200704092925368" revision="8" tags="$:/giffmex/stroll" title="$:/_sq/Stories/Story2StoryList" type="text/vnd.tiddlywiki">
 <pre></pre>
@@ -18227,8 +17847,8 @@ exports.context = contextWidget;
 <div created="20200418122101344" modified="20200625051822456" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/Explorer</pre>
 </div>
-<div created="20200418121835270" modified="20200704092926414" title="$:/state/tab/sidebar--595412856">
-<pre>TableOfContents</pre>
+<div created="20200418121835270" modified="20200704154726305" title="$:/state/tab/sidebar--595412856">
+<pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20200504200956301" modified="20200628155701482" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/EditorToolbar</pre>
@@ -18398,7 +18018,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20200703170724377" list="ProcessGroups [[Draft of 'ProcessSessions']] JobControl SIGHUP [[Joe Armstrong]] [[Programming language theory]] Elixir Erlang性能 [[Formal language]] [[Signal experience]] Bash [[Exit Codes With Special Meanings]] $:/AdvancedSearch [[wait &amp;&amp; waitpid]] TableOfContents" modified="20200704120440801" title="$:/StoryList">
+<div list="TableOfContents" title="$:/StoryList">
 <pre></pre>
 </div>
 <div bag="default" created="20191206235905940" modified="20200218074428072" revision="0" tags="$:/tags/Stylesheet" title="$:/styles/onlyice/ui-elements" type="text/vnd.tiddlywiki">
@@ -19794,11 +19414,6 @@ In terms of classiful [[networks]], there are five classes: A, B, C, D, and E. C
 <div created="20200622110429773" modified="20200622110429773" title="docker">
 <pre></pre>
 </div>
-<div created="20200704120100566" draft.of="ProcessSessions" draft.title="ProcessSessions" modified="20200704120429890" tags="JobControl" title="Draft of 'ProcessSessions'">
-<pre>[[JobControl]]
-
-</pre>
-</div>
 <div created="20200704090838711" modified="20200704090854798" tags="[[Programming language]]" title="Elixir">
 <pre>[[Programming language]]
 
@@ -20399,8 +20014,10 @@ The definition of a process, informally, is quite simple: it is a running progra
 
 &lt;/div&gt;</pre>
 </div>
-<div created="20200704120100566" modified="20200704120122822" tags="JobControl" title="ProcessSessions">
-<pre>[[JobControl]]</pre>
+<div created="20200704120100566" modified="20200704154737059" tags="JobControl" title="ProcessSessions">
+<pre>[[JobControl]]
+
+</pre>
 </div>
 <div created="20200626143636901" modified="20200626171253698" tags="[[Algebraic data type]]" title="product type" type="text/x-markdown">
 <pre>&gt; A product type (from &quot;Cartesian product&quot;, i.e tuples) T = A * B means that a value of type T has a component that is of type A and another component that is of type B. It is used to aggregate parts into a whole.
