--- a/wiki/index.html
+++ b/wiki/index.html
@@ -1817,8 +1817,8 @@ $:/config/ViewToolbarButtons/Visibility/$(listItem)$
 <div bag="default" created="20170615081040584" modified="20200704092944060" revision="0" title="$:/config/_sq/Stories/story2" type="text/vnd.tiddlywiki">
 <pre>yes</pre>
 </div>
-<div created="20200619183447964" modified="20200703172630965" title="$:/config/AutoSave">
-<pre>yes</pre>
+<div created="20200619183447964" modified="20200704155835795" title="$:/config/AutoSave">
+<pre>no</pre>
 </div>
 <div created="20200628154859021" modified="20200628154859021" title="$:/config/codemirror/keyMap" type="string">
 <pre>vim
@@ -17835,11 +17835,11 @@ exports.context = contextWidget;
 <div created="20200624162006372" modified="20200704092817731" title="$:/state/tab-1528275152">
 <pre>$:/core/ui/DefaultSearchResultList</pre>
 </div>
-<div created="20200418121928767" modified="20200703172712816" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Plugins</pre>
+<div created="20200418121928767" modified="20200704155834511" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Saving</pre>
 </div>
-<div created="20200616144657561" modified="20200703172708966" title="$:/state/tab-2065006209">
-<pre>$:/core/ui/ControlPanel/Saving/General</pre>
+<div created="20200616144657561" modified="20200704155845039" title="$:/state/tab-2065006209">
+<pre>$:/core/ui/ControlPanel/Saving/Gitea</pre>
 </div>
 <div created="20200702124900850" modified="20200702124900850" title="$:/state/tab-451103385">
 <pre>$:/plugins/danielo515/ContextPlugin/visualizer</pre>
@@ -18018,7 +18018,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20200704155735843" list="JobControl ProcessSessions ProcessGroups $:/ControlPanel TableOfContents" modified="20200704155755002" title="$:/StoryList">
+<div created="20200704155735843" list="[[wait &amp;&amp; waitpid]] JobControl ProcessSessions ProcessGroups TableOfContents" modified="20200704155837924" title="$:/StoryList">
 <pre></pre>
 </div>
 <div bag="default" created="20191206235905940" modified="20200218074428072" revision="0" tags="$:/tags/Stylesheet" title="$:/styles/onlyice/ui-elements" type="text/vnd.tiddlywiki">
@@ -19482,15 +19482,13 @@ LANG
 <div created="20200630081810644" modified="20200630081810644" title="Everything is a file">
 <pre></pre>
 </div>
-<div created="20200702124631274" modified="20200703061724097" tags="Process" title="exec">
+<div created="20200702124631274" modified="20200704155826178" tags="Process" title="exec">
 <pre>&lt;div class=&quot;box&quot;&gt;
-&quot;&quot;&quot;
 
 &gt; The exec() family of functions replaces the current [[Process]] image with a new process image.
 
 用fork创建子进程后执行的是和父进程相同的程序（但有可能执行不同的代码分支），子进程往往要调用一种exec函数以执行另一个程序。当进程调用一种exec函数时，该进程的用户空间代码和数据完全被新程序替换，从新程序的启动例程开始执行。调用exec并不创建新进程，所以调用exec前后该进程的id并未改变。
 
-&quot;&quot;&quot;
 &lt;/div&gt;
 
 调用exec后，原来打开的文件描述符仍然是打开的。利用这一点可以实现[[File&amp;IO]]重定向。</pre>
