--- a/wiki/index.html
+++ b/wiki/index.html
@@ -325,8 +325,6 @@ Error message and password prompt
 
 <li>$:/GitHub/Repo</li>
 
-<li>$:/GitHub/ServerURL</li>
-
 <li>$:/GitHub/Username</li>
 
 <li>$:/HCHaase/macros/icon</li>
@@ -1819,8 +1817,8 @@ $:/config/ViewToolbarButtons/Visibility/$(listItem)$
 <div bag="default" created="20170615081040584" modified="20200704092944060" revision="0" title="$:/config/_sq/Stories/story2" type="text/vnd.tiddlywiki">
 <pre>yes</pre>
 </div>
-<div created="20200619183447964" modified="20200704160318449" title="$:/config/AutoSave">
-<pre>yes</pre>
+<div created="20200619183447964" modified="20200704155835795" title="$:/config/AutoSave">
+<pre>no</pre>
 </div>
 <div created="20200628154859021" modified="20200628154859021" title="$:/config/codemirror/keyMap" type="string">
 <pre>vim
@@ -11517,10 +11515,7 @@ $:/config/ViewToolbarButtons/Visibility/$(listItem)$
 <div created="20200616145404278" modified="20200619183543310" title="$:/GitHub/Repo">
 <pre>YongHaoWu/YongHaoWu.github.io</pre>
 </div>
-<div created="20200704160349738" modified="20200704160523440" title="$:/GitHub/ServerURL">
-<pre>https://api.github.com</pre>
-</div>
-<div created="20200616145354076" modified="20200704160344059" title="$:/GitHub/Username">
+<div created="20200616145354076" modified="20200619183555435" title="$:/GitHub/Username">
 <pre>YongHaoWu</pre>
 </div>
 <div bag="default" created="20200210162320311" creator="HC Haase" modified="20200521150911135" modifier="HC Haase" revision="0" tags="$:/tags/Macro" title="$:/HCHaase/macros/icon" type="text/vnd.tiddlywiki">
@@ -17843,8 +17838,8 @@ exports.context = contextWidget;
 <div created="20200418121928767" modified="20200704155834511" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Saving</pre>
 </div>
-<div created="20200616144657561" modified="20200704160520015" title="$:/state/tab-2065006209">
-<pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
+<div created="20200616144657561" modified="20200704155845039" title="$:/state/tab-2065006209">
+<pre>$:/core/ui/ControlPanel/Saving/Gitea</pre>
 </div>
 <div created="20200702124900850" modified="20200702124900850" title="$:/state/tab-451103385">
 <pre>$:/plugins/danielo515/ContextPlugin/visualizer</pre>
@@ -18023,7 +18018,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20200704160308641" list="$:/ControlPanel TableOfContents" modified="20200704160338239" title="$:/StoryList">
+<div list="TableOfContents" title="$:/StoryList">
 <pre></pre>
 </div>
 <div bag="default" created="20191206235905940" modified="20200218074428072" revision="0" tags="$:/tags/Stylesheet" title="$:/styles/onlyice/ui-elements" type="text/vnd.tiddlywiki">
