--- a/wiki/index.html
+++ b/wiki/index.html
@@ -1824,8 +1824,8 @@ $:/config/ViewToolbarButtons/Visibility/$(listItem)$
 <pre>vim
 </pre>
 </div>
-<div created="20200616145157008" modified="20200616145157008" title="$:/config/DownloadSaver/AutoSave">
-<pre>yes</pre>
+<div created="20200616145157008" modified="20200704161430305" title="$:/config/DownloadSaver/AutoSave">
+<pre>no</pre>
 </div>
 <div created="20200510024843460" modified="20200603121638626" tags="$:/giffmex/stroll $:/giffmex/blinks" title="$:/config/EditorTypeMappings/text/vnd.tiddlywiki">
 <pre>comptext</pre>
@@ -17835,10 +17835,10 @@ exports.context = contextWidget;
 <div created="20200624162006372" modified="20200704092817731" title="$:/state/tab-1528275152">
 <pre>$:/core/ui/DefaultSearchResultList</pre>
 </div>
-<div created="20200418121928767" modified="20200704155834511" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Saving</pre>
+<div created="20200418121928767" modified="20200704161434453" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Plugins</pre>
 </div>
-<div created="20200616144657561" modified="20200704155845039" title="$:/state/tab-2065006209">
+<div created="20200616144657561" modified="20200704161433249" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/Gitea</pre>
 </div>
 <div created="20200702124900850" modified="20200702124900850" title="$:/state/tab-451103385">
@@ -18018,7 +18018,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="TableOfContents" title="$:/StoryList">
+<div created="20200704161324523" list="$:/core $:/config/DownloadSaver/AutoSave $:/ControlPanel TableOfContents" modified="20200704161436325" title="$:/StoryList">
 <pre></pre>
 </div>
 <div bag="default" created="20191206235905940" modified="20200218074428072" revision="0" tags="$:/tags/Stylesheet" title="$:/styles/onlyice/ui-elements" type="text/vnd.tiddlywiki">
