--- a/wiki/index.html
+++ b/wiki/index.html
@@ -17835,11 +17835,11 @@ exports.context = contextWidget;
 <div created="20200624162006372" modified="20200704092817731" title="$:/state/tab-1528275152">
 <pre>$:/core/ui/DefaultSearchResultList</pre>
 </div>
-<div created="20200418121928767" modified="20200704155834511" title="$:/state/tab-1749438307">
+<div created="20200418121928767" modified="20200704171916776" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Saving</pre>
 </div>
-<div created="20200616144657561" modified="20200704155845039" title="$:/state/tab-2065006209">
-<pre>$:/core/ui/ControlPanel/Saving/Gitea</pre>
+<div created="20200616144657561" modified="20200704172000367" title="$:/state/tab-2065006209">
+<pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
 </div>
 <div created="20200702124900850" modified="20200702124900850" title="$:/state/tab-451103385">
 <pre>$:/plugins/danielo515/ContextPlugin/visualizer</pre>
@@ -18018,7 +18018,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="TableOfContents" title="$:/StoryList">
+<div created="20200704171954255" list="$:/ControlPanel StrollTips" modified="20200704171954255" title="$:/StoryList">
 <pre></pre>
 </div>
 <div bag="default" created="20191206235905940" modified="20200218074428072" revision="0" tags="$:/tags/Stylesheet" title="$:/styles/onlyice/ui-elements" type="text/vnd.tiddlywiki">
@@ -19067,8 +19067,8 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200502174943975" modified="20200521150755106" title="$:/temp/RenameTags/search">
 <pre>blinks</pre>
 </div>
-<div created="20200418122544376" modified="20200704155614344" title="$:/temp/search">
-<pre></pre>
+<div created="20200418122544376" modified="20200704171935283" title="$:/temp/search">
+<pre>tips</pre>
 </div>
 <div created="20200626105030927" modified="20200626105030927" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html" url="https://tiddlywiki.com/library/v5.1.22/index.html">
 <pre>loaded</pre>
@@ -19482,9 +19482,9 @@ LANG
 <div created="20200630081810644" modified="20200630081810644" title="Everything is a file">
 <pre></pre>
 </div>
-<div created="20200702124631274" modified="20200704155826178" tags="Process" title="exec">
+<div created="20200702124631274" modified="20200704171932958" tags="Process" title="exec">
 <pre>&lt;div class=&quot;box&quot;&gt;
-
+  
 &gt; The exec() family of functions replaces the current [[Process]] image with a new process image.
 
 用fork创建子进程后执行的是和父进程相同的程序（但有可能执行不同的代码分支），子进程往往要调用一种exec函数以执行另一个程序。当进程调用一种exec函数时，该进程的用户空间代码和数据完全被新程序替换，从新程序的启动例程开始执行。调用exec并不创建新进程，所以调用exec前后该进程的id并未改变。
