--- a/wiki/index.html
+++ b/wiki/index.html
@@ -17838,7 +17838,7 @@ exports.context = contextWidget;
 <div created="20200418121928767" modified="20200704171916776" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Saving</pre>
 </div>
-<div created="20200616144657561" modified="20200704172000367" title="$:/state/tab-2065006209">
+<div created="20200616144657561" modified="20200704172052671" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
 </div>
 <div created="20200702124900850" modified="20200702124900850" title="$:/state/tab-451103385">
@@ -17847,7 +17847,7 @@ exports.context = contextWidget;
 <div created="20200418122101344" modified="20200625051822456" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/Explorer</pre>
 </div>
-<div created="20200418121835270" modified="20200704155750956" title="$:/state/tab/sidebar--595412856">
+<div created="20200418121835270" modified="20200704172141389" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20200504200956301" modified="20200628155701482" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -17901,23 +17901,23 @@ exports.context = contextWidget;
 <div created="20200624163244790" modified="20200701114727655" title="$:/state/toc/TableOfContents-Quote--118161433">
 <pre>open</pre>
 </div>
-<div created="20200625044710343" modified="20200704092930298" title="$:/state/toc/TableOfContents/Development-Algorithm--118161433">
+<div created="20200625044710343" modified="20200704172118715" title="$:/state/toc/TableOfContents/Development-Algorithm--118161433">
+<pre>open</pre>
+</div>
+<div created="20200626033025418" modified="20200704172127291" title="$:/state/toc/TableOfContents/Development-Computing--118161433">
 <pre>close</pre>
 </div>
-<div created="20200626033025418" modified="20200626033031974" title="$:/state/toc/TableOfContents/Development-Computing--118161433">
+<div created="20200629161608176" modified="20200704172128454" title="$:/state/toc/TableOfContents/Development-Debug--118161433">
 <pre>close</pre>
 </div>
-<div created="20200629161608176" modified="20200704092932623" title="$:/state/toc/TableOfContents/Development-Debug--118161433">
-<pre>close</pre>
-</div>
-<div created="20200626103141561" modified="20200704092936688" title="$:/state/toc/TableOfContents/Development-Formal language--118161433">
-<pre>close</pre>
+<div created="20200626103141561" modified="20200704172129501" title="$:/state/toc/TableOfContents/Development-Formal language--118161433">
+<pre>open</pre>
 </div>
 <div created="20200625051716578" modified="20200628053807915" title="$:/state/toc/TableOfContents/Development-Network--118161433">
 <pre>close</pre>
 </div>
-<div created="20200624161956789" modified="20200704092927938" title="$:/state/toc/TableOfContents/Development-OS--118161433">
-<pre>close</pre>
+<div created="20200624161956789" modified="20200704172139362" title="$:/state/toc/TableOfContents/Development-OS--118161433">
+<pre>open</pre>
 </div>
 <div created="20200624102744943" modified="20200704092933893" title="$:/state/toc/TableOfContents/Development-WorkExperience--118161433">
 <pre>close</pre>
@@ -17925,11 +17925,11 @@ exports.context = contextWidget;
 <div created="20200626103143294" modified="20200626103143294" title="$:/state/toc/TableOfContents/Development/Formal language-Golang--118161433">
 <pre>open</pre>
 </div>
-<div created="20200626103456082" modified="20200701130448230" title="$:/state/toc/TableOfContents/Development/Formal language-Programming language--118161433">
-<pre>close</pre>
+<div created="20200626103456082" modified="20200704172130993" title="$:/state/toc/TableOfContents/Development/Formal language-Programming language--118161433">
+<pre>open</pre>
 </div>
-<div created="20200626103950075" modified="20200702162523869" title="$:/state/toc/TableOfContents/Development/Formal language-Regular expression--118161433">
-<pre>close</pre>
+<div created="20200626103950075" modified="20200704172130408" title="$:/state/toc/TableOfContents/Development/Formal language-Regular expression--118161433">
+<pre>open</pre>
 </div>
 <div created="20200626103456783" modified="20200626103456783" title="$:/state/toc/TableOfContents/Development/Formal language/Programming language-Golang--118161433">
 <pre>open</pre>
@@ -18018,7 +18018,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20200704171954255" list="$:/ControlPanel StrollTips" modified="20200704171954255" title="$:/StoryList">
+<div created="20200704171954255" list="JobControl ProcessGroups [[goalng CI build 二进制/tmp/zero-redis: No such file or directory]] Backend [[Merkle tree]] [[Books From Zhihu]] [[Liberal arts]] Network Debug Algorithm exec" modified="20200704172150193" title="$:/StoryList">
 <pre></pre>
 </div>
 <div bag="default" created="20191206235905940" modified="20200218074428072" revision="0" tags="$:/tags/Stylesheet" title="$:/styles/onlyice/ui-elements" type="text/vnd.tiddlywiki">
@@ -19748,12 +19748,14 @@ In computer science, inter-process communication or interprocess communication (
 <div created="20200628054351273" modified="20200628054351273" title="irqbalance">
 <pre></pre>
 </div>
-<div created="20200704115412787" modified="20200704120155628" tags="Linux" title="JobControl">
+<div created="20200704115412787" modified="20200704172208446" tags="Linux" title="JobControl">
 <pre>[[Linux]]
 
 [[ProcessSessions]] and [[ProcessGroups]] were defined to support shell job control (although occasionally they find other uses in applications). 
 
-A session is a collection of process groups, and a process group is a collection of processes.</pre>
+A session is a collection of process groups, and a process group is a collection of processes.
+
+[img[https://learning.oreilly.com/library/view/the-linux-programming/9781593272203/images/f34-01.jpg]]</pre>
 </div>
 <div created="20200620041557875" modified="20200620041557875" title="Joe Armstrong">
 <pre></pre>
