--- a/wiki/index.html
+++ b/wiki/index.html
@@ -11515,7 +11515,7 @@ $:/config/ViewToolbarButtons/Visibility/$(listItem)$
 <div created="20200616145404278" modified="20200619183543310" title="$:/GitHub/Repo">
 <pre>YongHaoWu/YongHaoWu.github.io</pre>
 </div>
-<div created="20200616145354076" modified="20200619183555435" title="$:/GitHub/Username">
+<div created="20200616145354076" modified="20200704173423854" title="$:/GitHub/Username">
 <pre>YongHaoWu</pre>
 </div>
 <div bag="default" created="20200210162320311" creator="HC Haase" modified="20200521150911135" modifier="HC Haase" revision="0" tags="$:/tags/Macro" title="$:/HCHaase/macros/icon" type="text/vnd.tiddlywiki">
@@ -17838,8 +17838,8 @@ exports.context = contextWidget;
 <div created="20200418121928767" modified="20200704171916776" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Saving</pre>
 </div>
-<div created="20200616144657561" modified="20200704171922904" title="$:/state/tab-2065006209">
-<pre>$:/core/ui/ControlPanel/Saving/DownloadSaver</pre>
+<div created="20200616144657561" modified="20200704173037051" title="$:/state/tab-2065006209">
+<pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
 </div>
 <div created="20200702124900850" modified="20200702124900850" title="$:/state/tab-451103385">
 <pre>$:/plugins/danielo515/ContextPlugin/visualizer</pre>
@@ -18018,7 +18018,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="JobControl" title="$:/StoryList">
+<div created="20200704173421072" list="$:/ControlPanel TableOfContents" modified="20200704173421072" title="$:/StoryList">
 <pre></pre>
 </div>
 <div bag="default" created="20191206235905940" modified="20200218074428072" revision="0" tags="$:/tags/Stylesheet" title="$:/styles/onlyice/ui-elements" type="text/vnd.tiddlywiki">
@@ -19067,8 +19067,8 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200502174943975" modified="20200521150755106" title="$:/temp/RenameTags/search">
 <pre>blinks</pre>
 </div>
-<div created="20200418122544376" modified="20200704171935283" title="$:/temp/search">
-<pre>tips</pre>
+<div created="20200418122544376" modified="20200704173344337" title="$:/temp/search">
+<pre></pre>
 </div>
 <div created="20200626105030927" modified="20200626105030927" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html" url="https://tiddlywiki.com/library/v5.1.22/index.html">
 <pre>loaded</pre>
@@ -19482,8 +19482,8 @@ LANG
 <div created="20200630081810644" modified="20200630081810644" title="Everything is a file">
 <pre></pre>
 </div>
-<div created="20200702124631274" modified="20200704171932958" tags="Process" title="exec">
-<pre>&lt;div class=&quot;box&quot;&gt;
+<div created="20200702124631274" modified="20200704173351269" tags="Process" title="exec">
+<pre>&lt;div class=&quot;box&quot;&gt;. 
   
 &gt; The exec() family of functions replaces the current [[Process]] image with a new process image.
 
@@ -19748,14 +19748,12 @@ In computer science, inter-process communication or interprocess communication (
 <div created="20200628054351273" modified="20200628054351273" title="irqbalance">
 <pre></pre>
 </div>
-<div created="20200704115412787" modified="20200704172604253" tags="Linux" title="JobControl">
+<div created="20200704115412787" modified="20200704120155628" tags="Linux" title="JobControl">
 <pre>[[Linux]]
 
 [[ProcessSessions]] and [[ProcessGroups]] were defined to support shell job control (although occasionally they find other uses in applications). 
 
-A session is a collection of process groups, and a process group is a collection of processes.
-
-[img[https://learning.oreilly.com/library/view/the-linux-programming/9781593272203/images/f34-01.jpg]]</pre>
+A session is a collection of process groups, and a process group is a collection of processes.</pre>
 </div>
 <div created="20200620041557875" modified="20200620041557875" title="Joe Armstrong">
 <pre></pre>
