--- a/wiki/index.html
+++ b/wiki/index.html
@@ -11515,8 +11515,8 @@ $:/config/ViewToolbarButtons/Visibility/$(listItem)$
 <div created="20200616145404278" modified="20200619183543310" title="$:/GitHub/Repo">
 <pre>YongHaoWu/YongHaoWu.github.io</pre>
 </div>
-<div created="20200616145354076" modified="20200704173423854" title="$:/GitHub/Username">
-<pre>YongHaoWu</pre>
+<div created="20200616145354076" modified="20200704173317957" title="$:/GitHub/Username">
+<pre>YongHao</pre>
 </div>
 <div bag="default" created="20200210162320311" creator="HC Haase" modified="20200521150911135" modifier="HC Haase" revision="0" tags="$:/tags/Macro" title="$:/HCHaase/macros/icon" type="text/vnd.tiddlywiki">
 <pre>\define icon(icon navigate tooltip) 
@@ -18018,7 +18018,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20200704173421072" list="$:/ControlPanel TableOfContents" modified="20200704173421072" title="$:/StoryList">
+<div created="20200704173555954" list="$:/ControlPanel TableOfContents" modified="20200704173555954" title="$:/StoryList">
 <pre></pre>
 </div>
 <div bag="default" created="20191206235905940" modified="20200218074428072" revision="0" tags="$:/tags/Stylesheet" title="$:/styles/onlyice/ui-elements" type="text/vnd.tiddlywiki">
