--- a/index.html
+++ b/index.html
@@ -1817,8 +1817,8 @@ $:/config/ViewToolbarButtons/Visibility/$(listItem)$
 <div bag="default" created="20170615081040584" modified="20200704092944060" revision="0" title="$:/config/_sq/Stories/story2" type="text/vnd.tiddlywiki">
 <pre>yes</pre>
 </div>
-<div created="20200619183447964" modified="20200704155835795" title="$:/config/AutoSave">
-<pre>no</pre>
+<div created="20200619183447964" modified="20200704174129855" title="$:/config/AutoSave">
+<pre>yes</pre>
 </div>
 <div created="20200628154859021" modified="20200628154859021" title="$:/config/codemirror/keyMap" type="string">
 <pre>vim
@@ -17838,8 +17838,8 @@ exports.context = contextWidget;
 <div created="20200418121928767" modified="20200704171916776" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Saving</pre>
 </div>
-<div created="20200616144657561" modified="20200704173037051" title="$:/state/tab-2065006209">
-<pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
+<div created="20200616144657561" modified="20200704174131923" title="$:/state/tab-2065006209">
+<pre>$:/core/ui/ControlPanel/Saving/Gitea</pre>
 </div>
 <div created="20200702124900850" modified="20200702124900850" title="$:/state/tab-451103385">
 <pre>$:/plugins/danielo515/ContextPlugin/visualizer</pre>
@@ -18018,7 +18018,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20200704173555954" list="$:/ControlPanel TableOfContents" modified="20200704173555954" title="$:/StoryList">
+<div created="20200704174125906" list="JobControl ProcessGroups exec TableOfContents" modified="20200704174216517" title="$:/StoryList">
 <pre></pre>
 </div>
 <div bag="default" created="20191206235905940" modified="20200218074428072" revision="0" tags="$:/tags/Stylesheet" title="$:/styles/onlyice/ui-elements" type="text/vnd.tiddlywiki">
@@ -19482,8 +19482,8 @@ LANG
 <div created="20200630081810644" modified="20200630081810644" title="Everything is a file">
 <pre></pre>
 </div>
-<div created="20200702124631274" modified="20200704173351269" tags="Process" title="exec">
-<pre>&lt;div class=&quot;box&quot;&gt;. 
+<div created="20200702124631274" modified="20200704174202986" tags="Process" title="exec">
+<pre>&lt;div class=&quot;box&quot;&gt;
   
 &gt; The exec() family of functions replaces the current [[Process]] image with a new process image.
 
@@ -19748,12 +19748,14 @@ In computer science, inter-process communication or interprocess communication (
 <div created="20200628054351273" modified="20200628054351273" title="irqbalance">
 <pre></pre>
 </div>
-<div created="20200704115412787" modified="20200704120155628" tags="Linux" title="JobControl">
+<div created="20200704115412787" modified="20200704174230421" tags="Linux" title="JobControl">
 <pre>[[Linux]]
 
 [[ProcessSessions]] and [[ProcessGroups]] were defined to support shell job control (although occasionally they find other uses in applications). 
 
-A session is a collection of process groups, and a process group is a collection of processes.</pre>
+A session is a collection of process groups, and a process group is a collection of processes.
+
+[img[https://learning.oreilly.com/library/view/the-linux-programming/9781593272203/images/f34-01.jpg]]</pre>
 </div>
 <div created="20200620041557875" modified="20200620041557875" title="Joe Armstrong">
 <pre></pre>
